--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -14,7 +14,8 @@
     "\n",
     "[https://regex101.com/r/5ljjgB/1](https://regex101.com/r/5ljjgB/1)(可以设置中文语言)\n",
     "\n",
-    "### 在线bian'ji为了在PGSQL实现一些正则的替换，提取等，本地没有数据库，可以通过在线的形式进行编写:\n",
+    "### 在线编写SQL语句\n",
+    "为了在PGSQL实现一些正则的替换，提取等，本地没有数据库，可以通过在线的形式进行编写:\n",
     "[https://rextester.com/l/postgresql_online_compiler](https://rextester.com/l/postgresql_online_compiler)\n",
     "\n",
     "提取一堆字符中的第一个数字（可含小数点）\n",
@@ -22,7 +23,8 @@
     "\n",
     "select regexp_matches('2019-01-24','(?<!(((19|20|21)[0-9]{2})-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])))[0-9]+\\.?[0-9]*') as f1 \n",
     "\n",
-    "学习参考：[PostgreSQL 正则表达式替换-使用变量](https://blog.csdn.net/kmblack1/article/details/79064420)"
+    "### 学习参考\n",
+    "- [PostgreSQL 正则表达式替换-使用变量](https://blog.csdn.net/kmblack1/article/details/79064420)"
    ]
   }
  ],
